@@ -116,6 +116,7 @@ fixed bugs:
 - fixed wrong status code in presence of user objective limit and a feasible solution that is not better than the limit
 - fixed bug regarding modifying bounds in original problem if negated original variables exist
 - fixed bug in ZIMPL file reader for multiple occurrences of a single variable in the objective function
+- fixed bug with deleting variables from the transformed problem that are contained in the implication graph
 
 
 SCIP version 0.90
